Add create city route
