# src/module/city/controller.ts
@@ -1,8 +1,11 @@
 import type { FastifyRequest } from "fastify"
 
 import { NotFoundError } from "../../server/errors"
-import { JsonResponse, PathParams } from "../../types/types"
-import { getCity } from "./repository"
+import { CityCreate } from "../../types/schemas"
+import { JsonResponse, PathParams, RequestBody } from "../../types/types"
+import { slugify } from "../../util/slugify"
+import { createCity, getCity } from "./repository"
+import { sendWebhook } from "../webhook/service"
 
 export const cityController = {
   getCity: async (
@@ -13,6 +16,20 @@ export const cityController = {
     const data = await getCity(req.params.id)
 
     if (!data) throw new NotFoundError("City not found")
+
+    return { data }
+  },
+
+  createCity: async (
+    req: FastifyRequest<{
+      Body: RequestBody<"createCity">
+    }>,
+  ): Promise<JsonResponse<"createCity">> => {
+    const body: CityCreate = req.body
+
+    const data = await createCity({ ...body, id: slugify(body.name) })
+
+    await sendWebhook(data)
 
     return { data }
   },
